# opencv_playground

./: .gitignore  CMakeLists.txt  README.md  first_exercise.cpp
GFTT+LKOF/: lucaskanade.cpp
bg_sub/: bg.cpp  bg.h  main.cpp
bg_sub_gaussians/: bg.cpp  bg.h  main.cpp
face_detection/: main.cpp
hog/: HOG.cpp
kalman/: KalmanFilter_start.cpp  kalman_acceleration.cpp
meanshift/: meanShift_start.cpp
sift/: SIFT.cpp
